# monailabelclient

./: CMakeLists.txt  README.md  main.cpp  monailabel.cpp  monailabel.h  monailabel.ui
monailabelclient/: CMakeLists.txt  monailabelclient.cpp  monailabelclient.h
